--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <a class="navbar-brand" href="#">Projetos</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
+                <href="testev.html"
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <!--<ul class="navbar-nav ms-auto">
