--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a class="navbar-brand" href="#">Projetos</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-                <href="testev.html"
+                
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <!--<ul class="navbar-nav ms-auto">
@@ -41,7 +41,7 @@
                 <div class="project-card-body">
                     <h5 class="project-card-title">Teste Vocacional</h5>
                     <p class="project-card-text">Exemplo de uso de selects para criação de um teste vocacional.</p>
-                    <a href="selects/index.html" class="btn btn-custom">Ver Exemplo</a>
+                    <a href="testev.html" class="btn btn-custom">Ver Exemplo</a>
                 </div>
             </div>
             <!--
