--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="project-card-body">
                     <h5 class="project-card-title">Teste Vocacional</h5>
                     <p class="project-card-text">Exemplo de uso de selects para criação de um teste vocacional.</p>
-                    <a href="testev.html" class="btn btn-custom">Ver Exemplo</a>
+                    <a href="index.html" class="btn btn-custom">Ver Exemplo</a>
                 </div>
             </div>
             <!--
